--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,8 @@ dependencies:
   flutter:
     sdk: flutter
   spritewidget:
-
+  yaml: ^2.2.0
+  carousel_slider: ^1.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -35,6 +36,15 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/book_structure_template.yml
+    - assets/particle-0.png
+    - assets/particle-1.png
+    - assets/particle-2.png
+    - assets/particle-3.png
+    - assets/particle-4.png
+    - assets/particle-5.png
+    - assets/background.jpg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -43,8 +53,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #  - book_structure_template.yml;
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
