--- a/assets/book_structure_template.yml
+++ b/assets/book_structure_template.yml
@@ -41,35 +41,85 @@ app:
                 font: CrimsonText #text only
                 color: 0xFF42A5F5 #text only
                 user-interaction: true
-              objectActions:
-                objectAction:
-                  index: 1
-                  type: "Sequence Action"
-                  actions:
-                    - action:
-                        index: 1
-                        type: "move"
-                        parameters:
-                          name: EaseIn
-                          duration: 1
-                          start-val:
-                            x: 0.0
-                            y: 0.0
-                          end-val:  
-                            x: 300.0
-                            y: 300.0
-                    - action:
-                        index: 2
-                        type: "move"
-                        parameters:
-                          name: BouncedOut
-                          duration: 1
-                          start-val:
-                            x: 300.0
-                            y: 300.0
-                          end-val:  
-                            x: 300.0
-                            y: 100.0
+              object-actions:
+                - object-action:
+                    index: 1
+                    type: "Sequence Action"
+                    active:
+                      type: "auto"
+                    actions:
+                      - action:
+                          index: 1
+                          type: "move"
+                          parameters:
+                            name: EaseIn
+                            duration: 1.0
+                            start-val:
+                              x: 0.0
+                              y: 0.0
+                            end-val:  
+                              x: 300.0
+                              y: 300.0
+                      - action:
+                          index: 2
+                          type: "move"
+                          parameters:
+                            name: BouncedOut
+                            duration: 1.0
+                            start-val:
+                              x: 300.0
+                              y: 300.0
+                            end-val:  
+                              x: 300.0
+                              y: 100.0
+          - object:
+              index: 2 #1 -> n
+              type: "text"
+              coordinates:
+                x: 400.0
+                y: 400.0
+                w: 100.0
+                h: 30.0
+              content: 'caccacac' #text only
+              properties:
+                opacity: 0.6
+                rotation: 0.0
+                fontSize: 30.0 #text only
+                font-weight: 400 #text only
+                font: CrimsonText #text only
+                color: 0xFF42A5F5 #text only
+                user-interaction: true
+              object-actions:
+                - object-action:
+                    index: 1
+                    type: "Sequence Action"
+                    active:
+                      type: "auto"
+                    actions:
+                      - action:
+                          index: 1
+                          type: "move"
+                          parameters:
+                            name: EaseIn
+                            duration: 1.0
+                            start-val:
+                              x: 400.0
+                              y: 400.0
+                            end-val:  
+                              x: 200.0
+                              y: 200.0
+                      - action:
+                          index: 2
+                          type: "move"
+                          parameters:
+                            name: BouncedIn
+                            duration: 1.0
+                            start-val:
+                              x: 200.0
+                              y: 200.0
+                            end-val:  
+                              x: 200.0
+                              y: 500.0
 ...
 
 
