--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ flutter:
         - asset: fonts/CrimsonText-Regular.ttf
   assets:
     - assets/book_structure_template.yml
+    - assets/1.jpg
     - assets/particle-0.png
     - assets/particle-1.png
     - assets/particle-2.png
