--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   spritewidget:
   yaml: ^2.2.0
   carousel_slider: ^1.3.0
+  chewie: 
+    git:
+      url: git://github.com/huanhiendanh/chewie.git
+      ref: master
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -53,6 +57,7 @@ flutter:
     - assets/image1.jpg
     - assets/image2.jpg
     - assets/image3.jpg
+    - assets/video_sample.mp4
 
 
   # The following line ensures that the Material Icons font is
