--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   spritewidget:
   yaml: ^2.2.0
   carousel_slider: ^1.3.0
+  union: 0.0.3+1
   chewie: 
     git:
       url: git://github.com/huanhiendanh/chewie.git
