--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   yaml: ^2.2.0
   carousel_slider: ^1.3.0
   union: 0.0.3+1
+  just_audio: 
+  rxdart: ^0.24.1
   chewie: 
     git:
       url: git://github.com/huanhiendanh/chewie.git
