--- a/assets/book_structure_template.yml
+++ b/assets/book_structure_template.yml
@@ -40,26 +40,24 @@ app:
           #           originalImage: assets/image3.jpg
           - object:
                 index: "2" #1 -> n
-                type: text
+                type: "image"
+                name: "demo"
                 coordinates:
-                  x: 436.6598061971407
-                  y: 2.21915698725336
-                  w: 90
-                  h: 32.009765625
-                content: '123456'
+                  x: 300.0
+                  y: 100.0
+                  w: 300.0
+                  h: 300.0
+                originalImage: assets/image3.jpg
                 properties:
-                  scale: 1
-                  alpha: 0.6
+                  alpha: 1
                   rotation: 0
-                  fontSize: 30
-                  fontWeight: 400
-                  font: CrimsonText
-                  color: 4282557941
+                  scale: 1
                 objectActions:
                   - objectAction:
                       index: "1"
                       type: "Sequence Action"
-                      motion: "repeat forever"
+                      motion: "repeat"
+                      repeatTimes: 5
                       active:
                         type: auto
                       actions:
@@ -75,11 +73,11 @@ app:
                             type: "scale"
                             parameters:
                               duration: 0.5
-                              startVal: 1.0
-                              endVal: 0.4
+                              startVal: 2.0
+                              endVal: 1.0
                         - action:
                             index: "2"
-                            type: "scale"
+                            type: "opacity"
                             parameters:
                               duration: 0.5
                               startVal: 1.0
