--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
     git:
       url: git://github.com/huanhiendanh/chewie.git
       ref: master
+  PDFViewer:
+    path: ./pdfviewer
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
