--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ dependencies:
       url: git://github.com/huanhiendanh/chewie.git
       ref: master
   PDFViewer:
-    path: ./pdfviewer
+    git:
+      url: git://github.com/FIT-16CLC-InteractionBook/PDFViewer.git
+      ref: master
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
